2003-12-29 0.8.1.7  Bas Wijnen <b.wijnen@phys.rug.nl>

	* client/common/build.c (build_move), client/common/callback.h
	* (top level, struct callbacks), client/common/client.c (top level,
	* client_init, mode_domestic_trade), client/gtk/callbacks.c
	* (frontend_trade, frontend_set_callbacks), client/gtk/trade.c
	* (trade_update, trade_perform_maritime, trade_perform_domestic): Fixed
	bug #863901: maritime quote doesn't disappear when resources are no
	longer available.
	* client/common/client.c (mode_discard, mode_domestic_trade),
	* client/common/player.c (player_build_add, player_build_remove): Code
	cleanup.
	* Added can_play_any_develop, get_devel_deck, get_bank, get_map,
	* callbacks.error, frontend_error: Preparation for new AI structure.
	* cb_place_robber, client_start, frontend_init: Changed prototype.

2003-12-28 0.8.1.6  Roland Clobus <rclobus@bigfoot.com>

	* client/common/player.c (player_has_quit): Fix for (null) receives...
	(Bug #865870).
	* clinet/gtk/player.c (calc_statistic_row): Fix for viewers.
	* client/gtk/name.c (name_create_dlg): Remove scrolling from name
	change dialog.

2003-12-25  Jeff Breidenbach  <jbreiden@rode.parc.com>

	* docs/Makefile.am: registered gnocatanai manpage

2003-12-21 0.8.1.5  Roland Clobus <rclobus@bigfoot.com>

	* po/nl.po: Improved translation.

2003-12-21 0.8.1.4  Bas Wijnen <b.wijnen@phys.rug.nl>

	* client/gtk/interface.c (frontend_discard_remove),
	client/gtk/discard.c (discard_player_did): Removed warning at
	automatic discard.

2003-12-21 0.8.1.3  Roland Clobus <rclobus@bigfoot.com>

	* ai/client.c, ai/greedy.c, ai/trade.c, client/common/callback.c,
	client/common/client.h, client/common/gnocatan.c,
	client/common/player.c, client/gtk/frontend.h, client/gtk/gui.c,
	client/gtk/player.c, common/game.c, server/gold.c, server/player.c,
	server/pregame.c, server/turn.c: Code cleanup.

2003-12-21 0.8.1.2  Roland Clobus <rclobus@bigfoot.com>

	* client/gtk/guimap.c (guimap_draw_hex): Fixed bug #230252; draw