@@ -1,3 +1,10 @@
+2003-12-30 0.8.1.8  Bas Wijnen <b.wijnen@phys.rug.nl>
+
+	* client/common/build.c, client/common/callback.h,
+	* client/common/client.c, client/common/setup.c,
+	* client/gtk/frontend.h, client/gtk/interface.c: Removed dependency on
+	BuildRec, modified prototype of callbacks.setup.
+
 2003-12-29 0.8.1.7  Bas Wijnen <b.wijnen@phys.rug.nl>
 
 	* client/common/build.c (build_move), client/common/callback.h
